[package]
name = "mcp-error"
version = "0.3.2"
authors = ["vincent@ephais.eu"]
edition = "2021"
description = "Error management library for all the MCP Studio rust project"
license = "For the exclusive use of Ephais. Reserved Rights."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "*"
serde_json = "1.0.140"
